--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,15 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137274645-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-137274645-1');
+    </script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
