add Masons google analytics

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,7 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-137274645-1');
+      gtag('config', 'UA-138361240-3');
     </script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
