--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,21 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137274645-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-137274645-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-137274645-1');
-      gtag('config', 'UA-138361240-3');
+      gtag("config", "UA-137274645-1");
+      gtag("config", "UA-138384184-2");
+      gtag("config", "UA-138361240-3");
     </script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
